force-app/main/default/objects/TCO_ChannelRouting__mdt/TCO_ChannelRouting__mdt.object-meta.xml
<CustomObject>
    <description>Mapeia canal de entrada para unidade de negócio do atendimento.</description>
    <label>TCO Channel Routing</label>
    <pluralLabel>TCO Channel Routings</pluralLabel>
</CustomObject>