force-app/main/default/objects/TCO_ChannelRouting__mdt/fields/TCF_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>TCF_BusinessUnit__c</fullName>
    <description>Nome da unidade de negócio associada ao canal mapeado.</description>
    <label>Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>