force-app/main/default/objects/TCO_ChannelRouting__mdt/fields/TCF_ChannelIdentifier__c.field-meta.xml
<CustomField>
    <fullName>TCF_ChannelIdentifier__c</fullName>
    <description>Identificador técnico opcional do canal/conversa para refinamento do roteamento.</description>
    <label>Channel Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>