force-app/main/default/objects/TCO_ChannelRouting__mdt/fields/TCF_ChannelType__c.field-meta.xml
<CustomField>
    <fullName>TCF_ChannelType__c</fullName>
    <description>Tipo de canal normalizado (WHATSAPP, CHAT, MESSAGING).</description>
    <label>Channel Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>