force-app/main/default/objects/TCO_ChannelRouting__mdt/fields/TCF_IsActive__c.field-meta.xml
<CustomField>
    <fullName>TCF_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se o mapeamento do canal está ativo para uso.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>